# barra-dashboard

./: .env.example  .gitignore  AGENTS.md  Makefile  OPERATIONS_PLAYBOOK.md  start.sh
backend/: CUSE4_WORK_PROGRESS_LOG.md  README.md  TRBC_INDUSTRY_HISTORY_PROTOCOL.md  app_factory.py  config.py  main.py  pyproject.toml  trading_calendar.py
backend/analytics/: contracts.py  health.py  pipeline.py  publish_payloads.py  refresh_context.py  refresh_metadata.py  refresh_persistence.py  refresh_publication.py  reuse_policy.py  trbc_economic_sector_short.py
backend/api/: auth.py  router_registry.py
backend/barra/: covariance.py  daily_factor_returns.py  descriptors.py  eligibility.py  raw_cross_section_history.py  risk_attribution.py  specific_risk.py
backend/cpar/: __init__.py  backtransform.py  contracts.py  factor_registry.py  hedge_engine.py  orthogonalization.py  regression.py  returns_panel.py  status_rules.py  weekly_anchors.py
backend/cuse4/: __init__.py  bootstrap.py  estu.py
backend/data/: account_scope.py  app_identity.py  cache.py  core_read_backend.py  core_reads.py  cpar_outputs.py  cpar_queries.py  cpar_schema.py  cpar_source_reads.py  cpar_writers.py  history_queries.py  holdings_reads.py  job_runs.py  model_output_state.py  model_outputs.py  postgres.py  registry_quote_reads.py  serving_output_manifest.py  serving_output_write_authority.py  serving_outputs.py  source_dates.py  sqlite.py
backend/db/: cross_section_snapshot.py  fundamental_schema.py  model_outputs.py  postgres.py  prices_schema.py  sqlite.py  trbc_schema.py  universe_schema.py
backend/jobs/: run_model_pipeline.py
backend/ops/: cloud_run_jobs.py
backend/orchestration/: cpar_profiles.py  cpar_stages.py  post_run_publish.py  profiles.py  refresh_execution.py  run_cpar_pipeline.py  run_model_pipeline.py  runtime_support.py  stage_core.py  stage_runner.py  stage_serving.py  stage_source.py
backend/portfolio/: models.py  (+1 more)
(+458 files in other folders)
