[project]
name = "barra-dashboard-backend"
version = "0.1.0"
description = "Barra Factor Risk Model Dashboard - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
    "exchange-calendars>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=7.4.0",
]
lseg = [
    "jl-lseg-toolkit>=0.1.0; python_version >= '3.12'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
    "backend",
    "backend.analytics",
    "backend.barra",
    "backend.cuse4",
    "backend.db",
    "backend.jobs",
    "backend.portfolio",
    "backend.routes",
    "backend.scripts",
    "backend.services",
    "backend.vendor",
    "backend.vendor.lseg_toolkit",
    "backend.vendor.lseg_toolkit.client",
    "backend.vendor.lseg_toolkit.earnings",
    "backend.vendor.lseg_toolkit.equity_screener",
    "backend.vendor.lseg_toolkit.shared",
]

[tool.setuptools.package-dir]
backend = "."
"backend.analytics" = "analytics"
"backend.barra" = "barra"
"backend.cuse4" = "cuse4"
"backend.db" = "db"
"backend.jobs" = "jobs"
"backend.portfolio" = "portfolio"
"backend.routes" = "routes"
"backend.scripts" = "scripts"
"backend.services" = "services"
"backend.vendor" = "vendor"
"backend.vendor.lseg_toolkit" = "vendor/lseg_toolkit"
"backend.vendor.lseg_toolkit.client" = "vendor/lseg_toolkit/client"
"backend.vendor.lseg_toolkit.earnings" = "vendor/lseg_toolkit/earnings"
"backend.vendor.lseg_toolkit.equity_screener" = "vendor/lseg_toolkit/equity_screener"
"backend.vendor.lseg_toolkit.shared" = "vendor/lseg_toolkit/shared"
